css/main.css
:root {
  --color-primary: #d1861f;
  --color-lightGrey: #ddd;
  --color-grey: #747681;
  --grid-gutter: 2rem;
}

html {
  text-size-adjust: 100%;
  box-sizing: border-box;
  font-size: 62.5%;
  line-height: 1.15;
}

*,
::after,
::before {
  box-sizing: inherit;
}

body {
  font-family: sans-serif;
  font-size: 1.6rem;
  line-height: 1.6;
  margin: 0 auto;
  max-width: 720px;
  padding: 0 calc(var(--grid-gutter) / 2);
  width: 96%;
}

@media screen and (width <= 599px) {
  body {
    width: 100%;
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 500;
  margin: 0.2em 0;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.75em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.25em;
}

h5 {
  font-size: 1em;
}

h6 {
  font-size: 0.85em;
}

p {
  margin-top: 0;
}

blockquote {
  border-left: 3px solid var(--color-lightGrey);
  padding: 1rem 2rem;
}

code,
kbd {
  overflow-wrap: break-word;
  font-size: 90%;
}

pre {
  border: 1px solid var(--color-lightGrey);
  counter-reset: line;
  line-height: 1.6;
  padding: 0.6em;
  white-space: pre-wrap;
}

pre code::before {
  border-right: 1px solid #ddd;
  color: #888;
  content: counter(line, decimal-leading-zero);
  counter-increment: line;
  display: inline-block;
  margin-right: 0.5em;
  padding: 0 0.5em;
  user-select: none;
}

dl dt {
  font-weight: 700;
}

footer {
  border-top: 1px solid var(--color-primary);
  margin: 1em 0;
  padding-top: 1em;
}

table {
  border: none;
  border-collapse: collapse;
  border-spacing: 0;
  text-align: left;
  width: 100%;
}

table.striped tr:nth-of-type(2n) {
  background-color: var(--color-lightGrey);
}

td,
th {
  padding: 1.2rem 0.4rem;
  vertical-align: middle;
}

thead {
  border-bottom: 2px solid var(--color-lightGrey);
}

tfoot {
  border-top: 2px solid var(--color-lightGrey);
}

img {
  height: auto;
  width: 100%;
}

.card {
  border-radius: 4px;
  box-shadow: 0 1px 3px var(--color-grey);
  padding: 1rem 2rem;
}

.card p:last-child {
  margin: 0;
}

.pull-right {
  float: right !important;
}

.pull-left {
  float: left !important;
}

.text-center {
  text-align: center;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.text-justify {
  text-align: justify;
}

.text-uppercase {
  text-transform: uppercase;
}

.text-lowercase {
  text-transform: lowercase;
}

.text-capitalize {
  text-transform: capitalize;
}

.is-full-screen {
  min-height: 100vh;
  width: 100%;
}

.is-full-width {
  width: 100% !important;
}

.is-vertical-align {
  align-items: center;
}

.is-center,
.is-horizontal-align,
.is-vertical-align {
  display: flex;
}

.is-center,
.is-horizontal-align {
  justify-content: center;
}

.is-center {
  align-items: center;
}

.is-right {
  justify-content: flex-end;
}

.is-left,
.is-right {
  align-items: center;
  display: flex;
}

.is-left {
  justify-content: flex-start;
}

.is-fixed {
  position: fixed;
  width: 100%;
}

.is-paddingless {
  padding: 0 !important;
}

.is-marginless {
  margin: 0 !important;
}

.is-pointer {
  cursor: pointer !important;
}

.is-rounded {
  border-radius: 100%;
}

.clearfix {
  clear: both;
  content: "";
  display: table;
}

.is-hidden {
  display: none !important;
}

.datetime,
figure {
  font-size: small;
  margin-block-end: 1em;
}

ol,
ul {
  line-height: 1.9em;
}

.content-list {
  margin-bottom: calc(var(--grid-gutter) / 2);
}

.content-list a {
  color: #000;
  text-decoration: none;
}

.content-list .card:hover {
  border: 0.1rem solid var(--color-primary);
  padding: 0.9rem 1.9rem;
}

.logo {
  flex: 1;
  flex-direction: column;
  margin: 0.35em 0 0.5em;
}

.no-style-list {
  list-style-type: none;
}

.skip-link {
  position: absolute;
  top: -40px;
  left: 0;
  background: var(--color-primary);
  color: #fff;
  padding: 8px;
  z-index: 100;
}

.skip-link:focus {
  top: 0;
}

